2018-04-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* panelayoutmanager/panelayoutmanager_impl.C (remove_pane): Removal
	of pane #0 didn't work correctly.

0.4

2018-04-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* Do not reset standard combo-box by hitting Enter in the search
	field without typing in the search string first, if selection_required.

2018-04-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* cxxwtheme: make it a singleton application.

	* Move several internal header files into <x/w/impl>, making it
	possible to create custom display elements. Document an example
	of implementing some custom display elements.

	* Added spin button control to input fields.

0.3

2018-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add IN_THREAD to all connection thread callbacks.

	* Add IN_THREAD overloads to list layout manager methods.

2018-03-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Context popup menus.

2018-03-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* Convert tooltip callbacks from std::function to x::functionref

2018-03-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Password input fields.

2018-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Background colors may now be specified as gradients.

	* Implement basic theme option flags.

2018-02-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use CopyArea() to optimize scrollbar-based scrolling.

0.2

2018-02-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the print dialog.

	* hotspot: cool down to warm or cold temperature if the window
	loses keyboard focus.

2018-02-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* list.C (single_selection_type): Do not deselect if the selected
	item is already selected. Add single_optional_selection_type()
	that preserves the former behavior of single_selection_type(), if
	so desired.

2018-01-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* docbook/validatedinput.xml: Input field validation framework.
