@@ -1,3 +1,8 @@
+2018-04-22  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* input_field.C (set): Treat the string as encoded in the current
+	locale's character set, and not UTF-8.
+
 2018-04-17  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* panelayoutmanager/panelayoutmanager_impl.C (remove_pane): Removal
